and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 11th, 2014 G.Cosmo                   - geomvol-V10-00-05
- Corrected implementation of copy-constructor and assignment-operator
  for G4NavigationHistory, to provide exact copy for size of the
  histories-level vector.

June 10th, 2014 G.Cosmo                   - geomvol-V10-00-04
- Avoid un-necessary clearing of navigation history levels in
  G4NavigationHistory destructor.

May 14th, 2014 G.Cosmo                    - geomvol-V10-00-03
- Introduced pool G4NavigationHistoryPool for storage and reuse of
  navigation history levels collections.
  Disabled use of G4EnhancedAllocator in G4NavigationHistory accordingly.
- Use G4Allocator for dynamic allocations of G4NavigationHistory objects.

April 10th, 2014 G.Cosmo                  - geomvol-V10-00-02
- Get rid of deprecated 'register' storage class specifier in source files

March 31st, 2014 G.Cosmo                  - geomvol-V10-00-01
- Corrected signature of operator=() for G4LogicalBorder/SkinSurface.

February 14th, 2014 G.Cosmo               - geomvol-V10-00-00
- Minor cleanup and optimisation to G4EnhancedAllocator.
- Code cleanup in G4GeometryWorkspace and G4GeometryWorkspacePool.

November 19th, 2013 J.Apostolakis         - geomvol-V09-06-20
- Fix(es) for issues identified by Coverity:
  G4GeometryWorkspace: initialisation of data member.
  G4GeometryWorkspacePool: fixed implementation of singleton.

November  8th, 2013 J.Apostolakis         - geomvol-V09-06-19
- Cleanup: reduced verbosity of G4GeometryWorkspace by making it optional.  
  Added Set/Get Verbose methods to toggle and view it.

November  7th, 2013 J.Apostolakis         - geomvol-V09-06-18